--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "src/deps/juliaxmlwriter"]
-	path = src/deps/juliaxmlwriter
-	url = git@gitlab.com:ellifteria/juliaxmlwriter.git
+[submodule "deps/juliaxmlwriter"]
+	path = deps/juliaxmlwriter
+	url = git@github.com:ellifteria/juliaxmlwriter.git
