--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,4 @@
-name = "jRoClotho"
+name = "simrokit"
 uuid = "159b8a63-8e77-40d9-868e-d597ebb193bf"
 authors = ["Elli Beres <elliberes@proton.me>"]
 version = "0.1.0"
